chrome/src/components/Main/MainApp/CenterPiece/CenterPiece.scss
.center-piece {
  position: relative;
  width: 100%;
  height: 100%;
  //background: radial-gradient(rgba(0,0,0,0.25) 35%, rgba(0,0,0,0) 70%);
  z-index: 0;

  // -webkit-animation: fade 1s;
  // animation-timing-function: ease-in;
   -webkit-transform: translateY(-6%);
  display: flex;
  justify-content: center;

  user-select: none;
  cursor: default;

  @keyframes fade {
    from { opacity: 0; }
    to { opacity: 1 ; }
  }

  .clockAndGreeting {
    position: relative;
    z-index: 5;
    width: 100%;
    margin: 0 auto;
    align-self: center;
  }
}

